src/app.css
@import 'bootstrap/dist/css/bootstrap.min.css';

:root {
	--font-base: 'Inter', system-ui, sans-serif;

	/*-- Backgrounds --*/
	--bg-primary: #f8f9fa;
	--bg-card: #ffffff;

	/*-- Text --*/
	--text-primary: #212529;
	--text-muted: #6c757d;

	/*-- Borders --*/
	--border: #dee2e6;

	/*-- Online chip (light mode) --*/
	--online-bg: #e6f4ea;
	--online-fg: #137333;

	/*-- icon-hover --*/
	--icon-hover-bg: #f0f0f0;

	/*-- field border --*/
	--field-border: #c7c7c7;

	/*-- dropdown hover --*/
	--dropdown-hover-bg: #d1d2d88c;

	/*-- table hover --*/
	--table-hover-bg: #d1d2d81b;
}

.dark {
	/*-- Backgrounds --*/
	--bg-primary: #1e1e2f;
	--bg-card: #2a2a3e;

	/*-- Text --*/
	--text-primary: #ffffff;
	--text-muted: #d1d6e0a9;

	/*-- Borders --*/
	--border: #3b3b52;

	/*-- Online chip (dark mode) --*/
	--online-bg: #3cb62417;
	--online-fg: #00e676;
	/*-- icon-hover --*/
	--icon-hover-bg: #2965a5;

	/*-- field border --*/
	--field-border: #334c8a;

	/*-- dropdown hover --*/
	--dropdown-hover-bg: #3a66f7;

	/*-- table hover --*/
	--table-hover-bg: #18182b55;
}

/*-- font Styles --*/
html,
body {
	font-family: var(--font-base);
	line-height: 1.5;
}
.fw-inter-100 {
	font-weight: 100 !important;
}
.fw-inter-200 {
	font-weight: 200 !important;
}
.fw-inter-300 {
	font-weight: 300 !important;
}
.fw-inter-400 {
	font-weight: 400 !important;
}
.fw-inter-500 {
	font-weight: 500 !important;
}
.fw-inter-600 {
	font-weight: 600 !important;
}
.fw-inter-700 {
	font-weight: 700 !important;
}
.fw-inter-800 {
	font-weight: 800 !important;
}
.fw-inter-900 {
	font-weight: 900 !important;
}
.fst-inter-italic {
	font-style: italic !important;
}
.fst-inter-normal {
	font-style: normal !important;
}

